k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app
  namespace: production
  labels:
    app: devsecops-app
spec:
  type: ClusterIP
  selector:
    app: devsecops-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
